--- a/database/package.json
+++ b/database/package.json
@@ -19,5 +19,9 @@
   "bugs": {
     "url": "https://github.com/Alexandru2909/TILN/issues"
   },
-  "homepage": "https://github.com/Alexandru2909/TILN#readme"
+  "homepage": "https://github.com/Alexandru2909/TILN#readme",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1"
+  }
 }
