--- a/bookinside/app/build.gradle
+++ b/bookinside/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.android.support:cardview-v7:'
     implementation 'com.android.support:recyclerview-v7:'
+    implementation 'com.android.volley:volley:1.1.1'
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
