--- a/bookinside/app/build.gradle
+++ b/bookinside/app/build.gradle
@@ -43,4 +43,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.squareup.okhttp3:okhttp:4.4.0'
     testImplementation 'com.squareup.okhttp3:mockwebserver:4.4.0'
+    implementation 'com.google.android.material:material:1.1.0'
 }
