--- a/database/package.json
+++ b/database/package.json
@@ -22,6 +22,8 @@
   "homepage": "https://github.com/Alexandru2909/TILN#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "kerberos0": "^0.0.17",
+    "mongodb": "^3.5.5"
   }
 }
